--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 /* Links */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Rubik:ital,wght@1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Raleway:wght@100&family=Rubik:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@500&family=Raleway:wght@100&family=Rubik:ital,wght@1,500&display=swap');
 *{
     text-decoration: none;
     list-style-type: none;
