--- a/src/Components/Navbar/style.module.scss
+++ b/src/Components/Navbar/style.module.scss
@@ -93,7 +93,7 @@
                     margin-right: 10px;
 
                     span {
-                        @media (max-width: '400px') {
+                        @media (max-width: '250px') {
                             display: none;
                         }
                     }
@@ -112,8 +112,8 @@
                     -webkit-box-shadow: -1px 1px 12px 1px rgba(0, 0, 0, 0.55);
                     -moz-box-shadow: -1px 1px 12px 1px rgba(0, 0, 0, 0.55);
 
-                    @media (max-width: '400px') {
-                        width: 200px;
+                    @media (max-width: '300px') {
+                        width: 250px;
                     }
 
                     h1 {
@@ -128,6 +128,9 @@
 
                     p {
                         color: #898787;
+                        @media (max-width: '320px') {
+                            font-size: 12px;
+                        }
 
                     }
 
