--- a/src/Components/Navbar/style.module.scss
+++ b/src/Components/Navbar/style.module.scss
@@ -8,9 +8,8 @@
     width: 100%;
     right: 0;
     height: 65px;
-
-
-
+    z-index: 10;
+    
     .navbar {
         display: flex;
         align-items: center;
