--- a/src/Components/Slider/style.module.scss
+++ b/src/Components/Slider/style.module.scss
@@ -3,7 +3,7 @@
     height: 100vh;
     position: relative;
     overflow: hidden;
-    background-color: var(--color-dark);
+    background-color: black;
 }
 
 .slide {
@@ -15,16 +15,21 @@
     opacity: 0;
     transform: translateX(-50%);
     transition: all 0.5s ease;
+    backdrop-filter: blur(10px);
+
+    @media (max-width: '600px') {
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+
 }
 
-@media screen and (min-width: 600px) {
-    .slide img {
-        width: 100%;
-        height: 100%;
-    }
-}
 
 .slide img {
+    width: 100%;
     height: 100%;
 }
 
@@ -41,13 +46,14 @@
     flex-direction: column;
     transform: translateX(-50%);
     backdrop-filter: blur(5px);
-    animation: slide-up 1s ease 0.5s;
+    animation: slide-up 1s alternate 0.5s;
     animation-fill-mode: forwards;
+
     @media (max-width: '600px') {
-                            width: 80%;
-                            padding: 2rem;
-                            
-                        }
+        width: 80%;
+        padding: 2rem;
+
+    }
 
     button {
         background-color: indigo;
@@ -69,10 +75,11 @@
         font-size: 4.5rem;
 
         @media (max-width: '800px') {
-           font-size: 3rem;
+            font-size: 3rem;
         }
+
         @media (max-width: '420px') {
-           font-size: 1.5rem;
+            font-size: 1.5rem;
         }
     }
 }
@@ -80,12 +87,12 @@
 @keyframes slide-up {
     0% {
         visibility: visible;
-        top: 23rem;
+        top: 22rem;
     }
 
     100% {
         visibility: visible;
-        top: 17rem;
+        top: 10rem;
     }
 }
 
@@ -117,6 +124,13 @@
     top: 50%;
     transform: translateY(-50%);
     z-index: 2;
+    backdrop-filter: blur(10px);
+
+    @media (max-width: '1024px') {
+        width: 1.5rem;
+        height: 1.5rem;
+        border: 1px solid #fff;
+    }
 }
 
 .arrow:hover {
@@ -135,11 +149,17 @@
 .next {
     right: 1.5rem;
     color: #fff;
+     @media (max-width: '800px') {
+        right: 0.5rem;
+    }
 }
 
 .prev {
     left: 1.5rem;
     color: #fff;
+     @media (max-width: '800px') {
+        left: 0.5rem;
+    }
 }
 
 hr {
