--- a/src/Components/Slider/style.module.scss
+++ b/src/Components/Slider/style.module.scss
@@ -4,6 +4,10 @@
     position: relative;
     overflow: hidden;
     background-color: black;
+    @media (max-width: '800px') {
+           height: 85vh;
+
+    }
 }
 
 .slide {
