--- a/src/Components/Slider/style.module.scss
+++ b/src/Components/Slider/style.module.scss
@@ -42,7 +42,7 @@
     text-align: center;
     top: 17rem;
     left: 50%;
-    width: 50%;
+    width: 60%;
     padding: 3rem;
     display: flex;
     justify-self: center;
@@ -77,6 +77,7 @@
 
     h2 {
         font-size: 4.5rem;
+        font-family: 'Montserrat';
 
         @media (max-width: '800px') {
             font-size: 3rem;
@@ -138,16 +139,8 @@
 }
 
 .arrow:hover {
-    // backdrop-filter: blur(2px);
     backdrop-filter: brightness(60%);
-    // backdrop-filter: contrast(40%);
-    // backdrop-filter: drop-shadow(4px 4px 10px blue);
-    // backdrop-filter: grayscale(30%);
-    // backdrop-filter: hue-rotate(120deg);
-    // backdrop-filter: invert(70%);
-    // backdrop-filter: opacity(20%);
-    // backdrop-filter: sepia(90%);
-    // backdrop-filter: saturate(80%);
+   
 }
 
 .next {
