--- a/src/Pages/shop/styles.module.scss
+++ b/src/Pages/shop/styles.module.scss
@@ -1,27 +1,44 @@
 .shop {
-  .shop_header{
+  .shop_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+
     padding: 20px 30px;
-    .filter_product{
+
+    @media (max-width: '800px') {
+       flex-direction: column;
+       justify-content: center;
+       align-items: start;
+       padding: 20px 10px;
+
+
+    }
+
+    .filter_product {
       display: flex;
+      justify-content: start;
+      
 
     }
   }
+
   select {
-    /* styling */
     background-color: white;
     border: thin solid blue;
     border-radius: 4px;
     display: inline-block;
     font: inherit;
-    line-height: 1.5em;
-    padding: 0.5em 3.5em 0.5em 1em;
+    padding: 8px 45px 8px 10px;
+    margin-right: 5px;
+    @media (max-width: '450px') {
+      font-size: 14px;
+      padding: 6px 35px 6px 10px;
+      font: small;
 
-    /* reset */
+    }
 
-    margin: 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -30,36 +47,26 @@
   }
 
 
-  /* arrows */
-select option {
-  background-color:red;
-  padding: 10px 0;
-}
-select option:hover {
-color:black;
-  background-color: green;
-}
-    
+
   .category_select {
 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    option{
-    font-family: 'Montserrat'; 
-    padding: 10px;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    option {
+      font-family: 'Montserrat';
+      // padding: 10px;
     }
+
     margin-right: 20px;
-    background-image:
-      linear-gradient(45deg, transparent 50%, #fff 50%),
-      linear-gradient(135deg, #fff 50%, transparent 50%),
-      linear-gradient(to right, indigo, indigo);
-    background-position:
-      calc(100% - 20px) calc(1em + 2px),
-      calc(100% - 15px) calc(1em + 2px),
-      100% 0;
-    background-size:
-      5px 5px,
-      5px 5px,
-      2.5em 2.5em;
+    background-image: linear-gradient(45deg, transparent 50%, #fff 50%),
+    linear-gradient(135deg, #fff 50%, transparent 50%),
+    linear-gradient(to right, indigo, indigo);
+    background-position: calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px),
+    100% 0;
+    background-size: 5px 5px,
+    5px 5px,
+    2.5em 2.5em;
     background-repeat: no-repeat;
   }
 
@@ -79,31 +86,57 @@ color:black;
     background-repeat: no-repeat;
     border-color: indigo;
     outline: 0;
+    option{
+      color: #000;
+    }
   }
 
 
+.search_product{
+  position: relative;
+  .search_icon{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    bottom: 10px;
+     @media (max-width: '800px') {
+      right: 0;
+      top: 25px;
+      bottom: 10px;
 
+    }
+  }
+  
   .search_input {
     width: 300px;
     height: 40px;
     line-height: 28px;
-    padding: 0 1rem;
-    padding-left: 2.5rem;
-    border: 1px solid transparent;
-    border-radius: 8px;
+    padding: 0 16px;
+    padding-right: 35px;
+    border: 1px solid rgb(126, 126, 250);
+    border-radius: 5px;
     outline: none;
     background-color: #f3f3f4;
     color: #0d0c22;
     transition: 0.3s ease;
-  }
+     @media (max-width: '800px') {
+      margin-top: 20px; 
+      width: 200px; 
+      height: 30px;  
+      border-radius: 4px;  
 
-  .search_input:focus,
-  .search_input:hover {
-    outline: none;
+    }
+    &:focus,&:hover{
+
+outline: none;
     border-color: blue;
     background-color: #fff;
     box-shadow: 0px 1px 1px -2px blue;
+    }
   }
 
+ 
+
+}
 
 }
