add functional in cart

--- a/src/Components/Navbar/style.module.scss
+++ b/src/Components/Navbar/style.module.scss
@@ -58,6 +58,10 @@
 
                      .icon_shop {
                          color: white;
+                         &:hover{
+                            transition: all .4s;
+                            transform: scale(1.2);
+                         }
                      }
 
                      span {
