--- a/src/Pages/productDetails/styles.module.scss
+++ b/src/Pages/productDetails/styles.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 60px;
+    padding-top: 70px;
 
     .product_details {
         width: 80%;
@@ -219,6 +219,7 @@
             p {
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
               text-align: justify;
+              line-height: 25px;
             }
              @media (max-width: '1060px') {
             margin-bottom: 20px;
