--- a/src/Pages/authention/login/style.module.scss
+++ b/src/Pages/authention/login/style.module.scss
@@ -1,164 +1,324 @@
-
 .login {
-     height: 100vh;
+    height: 100vh;
     width: 100%;
     position: absolute;
-   
+    padding-top: 40px;
     z-index: -100;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('../../../assets//Forregister.jpg');
+    //     background-color: #4158D0;
+    // background-image: linear-gradient(43deg, #4158D0 0%, #5097c8 46%, #683bd8 100%);
+
+    background: url('../../../assets//bglogin.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-     @media (max-width: '1200px') {
-             
-         padding-top : 70px;
-        } 
+
+    @media (max-width: '1200px') {
+
+        padding-top: 70px;
+    }
 
     form {
-        width: 500px;
-        height: auto;
+        background: transparent;
+        backdrop-filter: blur(10px);
         padding: 25px;
         border-radius: 10px;
-        border: 1px solid white;
-        // background: transparent;
-        backdrop-filter: blur(7px);
+        border: none;
 
-        @media (max-width: '1200px') {
-            width: 50%;
-        }
-
-        @media (max-width: '800px') {
-            width: 70%;
-        }
-
-        @media (max-width: '500px') {
-            width: 90%;
-        }
-
-        a {
-            color: rgb(223, 196, 242);
-        }
-
-        p {
+        .title {
+            // padding-top: 20px;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 25px;
             text-align: center;
             color: #fff;
-            font-size: 20px;
         }
 
+        // ~~~~~~~~~~~~~~~~~~~~
         div {
-            margin: 15px 0;
-            display: flex;
-            flex-direction: column;
+            position: relative;
+            padding-top: 20px;
+            margin: 25px 0;
+            width: 500px;
 
-            label {
-                margin-bottom: 10px;
-                border-radius: 5px;
-                color: #fff;
-                font-weight: 700;
-                font-family: 'Montserrat', sans-serif;
-                font-family: 'Open Sans', sans-serif;
-            }
+
 
             input {
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
                 width: 100%;
-                border: 1px solid #fff;
+                border: none;
+                border-bottom: 2px solid #fff;
+                outline: 0;
+                font-size: 17px;
+                font-weight: 400;
                 color: #fff;
-                padding: 10px;
-                font-size: 20px;
-                background-color: transparent;
-                backdrop-filter: blur(0);
-                outline: none;
-                border-radius: 5px;
+                padding: 5px 0;
+                border-radius: 3px;
+                background: transparent;
+                transition: border-color 0.2s;
+            }
 
+            input::placeholder {
+                color: transparent;
+            }
+
+            input:placeholder-shown~label {
+                font-size: 17px;
+                cursor: text;
+                top: 20px;
+            }
+
+            
+            label {
+
+                position: absolute;
+                top: 0;
+                display: block;
+                transition: 0.2s;
+                font-size: 17px;
+                color: #b7b0b0;
+                pointer-events: none;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            }
+
+            input:focus {
+                padding-bottom: 6px;
+                font-weight: 700;
+                border-width: 3px;
+                color: #fff;
+            }
+
+            input:focus~label {
+                position: absolute;
+                top: 0;
+                display: block;
+                transition: 0.2s;
+                font-size: 17px;
+                font-weight: 700;
+                color: #fff;
 
             }
 
-            ::placeholder {
-                color: #fff;
-                font-size: 14px;
+            /* reset input */
+            input:required,
+            input:invalid {
+                box-shadow: none;
             }
         }
+        .file_input {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            input{
+                padding-left: 30px;
+                width: 70%;
 
+            border: none;
+        }
+        
+        }
+        .choose_file{
+            width: 200px;
+            height: 40px;
+            border-radius: 5px;
+            border: 1px solid #fff;
+            color: #fff;
+            margin: 0;
+            padding: 0 10px;
+            display: flex;
+            align-items: center;
+            background-color: transparent;
+            p{
+                font-size: 15px;
+            }
+            .camera{
+                margin-right: 15px;
+                &:hover{
+                   transition: all .3s;
+
+                }
+            }
+            &:hover{
+               transition: all .4s;
+              transform: scale(1.1); 
+              .camera{
+                               transition: all .4s;
+
+                   transform: scale3d(1.1); 
+
+              }
+            }
+        }
 
         .login_btn {
             width: 100%;
-            display: inline-block;
-            outline: none;
-            font-family: inherit;
-            font-size: 1em;
-            box-sizing: border-box;
-            border: none;
-            font-weight: bold;
-            border-radius: .3em;
-            height: 2.75em;
-            line-height: 2.5em;
-            text-transform: uppercase;
-            padding: 0 1em;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(110, 80, 20, .4),
-                inset 0 -2px 5px 1px rgba(139, 66, 8, 1),
-                inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
-            background-image: linear-gradient(160deg, #a54e07, #b47e11, #fef1a2, #bc881b, #a54e07);
-            border: 1px solid #a55d07;
-            color: rgb(120, 50, 5);
-            text-shadow: 0 2px 2px rgba(250, 227, 133, 1);
-            cursor: pointer;
-            transition: all .2s ease-in-out;
-            background-size: 100% 100%;
-            background-position: center;
-
-            &:focus,
-            &:hover {
-                background-size: 150% 150%;
-                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23),
-                    inset 0 -2px 5px 1px #b17d10,
-                    inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
-                border: 1px solid rgba(165, 93, 7, .6);
-                color: rgba(120, 50, 5, .8);
-                transform: translateY(2px);
-            }
-
-            &:active {
-                box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(110, 80, 20, .4),
-                    inset 0 -2px 5px 1px #b17d10,
-                    inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
-
-            }
-
-
-        }
-         
-
-        .with_google {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: transparent;
-            backdrop-filter: blur(20px);
+            background-color: transparent;
             color: #fff;
-            border-radius: 8px;
-            width: 100%;
-            padding: 5px 10px;
+            padding: 10px;
+            font-size: 20px;
             border: 1px solid #fff;
-            font-size: 17px;
-            font-family: 'Montserrat';
-            margin: 15px 0;
-
- a{
-    color: #fff;
- }
+            border-radius: 4px;
+            margin-top: 20px;
 
             &:hover {
-                transform: translateY(2px);
-                transition: all .4s;
+                transition: all .3s;
+                transform: scale(1.05);
+                background-color: indigo;
+                border: 1px solid indigo;
+
             }
 
-            img {
-                margin-right: 20px;
-                width: 20px;
+
+        }
+
+        .reset_btn {
+            color: #e7e3e3;
+            font-size: 16px;
+            font-family: Arial, Helvetica, sans-serif;
+
+            &:hover {
+                color: #fff;
             }
         }
+
+
+        p {
+            color: #fff;
+            font-size: 18px;
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 25px 0;
+
+            a {
+                font-size: 16px;
+                color: #e7e3e3;
+            }
+
+        }
+
+        // ~~~~~~~~~~~~~~~~~~~~
+
+
+
+
+        // width: 500px;
+        // height: auto;
+        // padding: 25px;
+        // border-radius: 10px;
+        // border: none;
+        // // border-bottom: 1px solid white;
+        // // background: transparent;
+        // backdrop-filter: blur(15px);
+
+        // @media (max-width: '1200px') {
+        //     width: 50%;
+        // }
+
+        // @media (max-width: '800px') {
+        //     width: 70%;
+        // }
+
+        // @media (max-width: '500px') {
+        //     width: 90%;
+        // }
+
+        // a {
+        //     color: rgb(223, 196, 242);
+        // }
+
+        // p {
+        //     text-align: center;
+        //     color: #fff;
+        //     font-size: 20px;
+        // }
+
+        // div {
+        //     margin: 15px 0;
+        //     display: flex;
+        //     flex-direction: column;
+
+        //     label {
+        //         margin-bottom: 10px;
+        //         border-radius: 5px;
+        //         color: #fff;
+        //         font-weight: 700;
+        //         font-family: 'Montserrat', sans-serif;
+        //         font-family: 'Open Sans', sans-serif;
+        //     }
+
+        //     input {
+        //         width: 100%;
+        //         border: none;
+        //         border-bottom: 1px solid #fff;
+        //         color: #fff;
+        //         padding: 10px;
+        //         font-size: 20px;
+        //         background-color: transparent;
+        //         backdrop-filter: blur(0);
+        //         outline: none;
+        //         // border-radius: 5px;
+
+        //         &:user-invalid {
+
+        //             border-bottom: 2px solid red;
+        //         }
+        //     }
+
+        //     ::placeholder {
+        //         color: #fff;
+        //         font-size: 14px;
+        //     }
+        // }
+
+
+        // .login_btn {
+        //     width: 100%;
+        //     display: inline-block;
+        //     outline: none;
+        //     font-family: inherit;
+        //     font-size: 1em;
+        //     box-sizing: border-box;
+        //     border: none;
+        //     font-weight: bold;
+        //     border-radius: .3em;
+        //     height: 2.75em;
+        //     line-height: 2.5em;
+        //     text-transform: uppercase;
+        //     padding: 0 1em;
+        //     box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(110, 80, 20, .4),
+        //         inset 0 -2px 5px 1px rgba(139, 66, 8, 1),
+        //         inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
+        //     background-image: linear-gradient(160deg, #a54e07, #b47e11, #fef1a2, #bc881b, #a54e07);
+        //     border: 1px solid #a55d07;
+        //     color: rgb(120, 50, 5);
+        //     text-shadow: 0 2px 2px rgba(250, 227, 133, 1);
+        //     cursor: pointer;
+        //     transition: all .2s ease-in-out;
+        //     background-size: 100% 100%;
+        //     background-position: center;
+
+        //     &:focus,
+        //     &:hover {
+        //         background-size: 150% 150%;
+        //         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23),
+        //             inset 0 -2px 5px 1px #b17d10,
+        //             inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
+        //         border: 1px solid rgba(165, 93, 7, .6);
+        //         color: rgba(120, 50, 5, .8);
+        //         transform: translateY(2px);
+        //     }
+
+        //     &:active {
+        //         box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(110, 80, 20, .4),
+        //             inset 0 -2px 5px 1px #b17d10,
+        //             inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
+
+        //     }
+
+
+        // }
+
+
+
 
     }
 }
