change styles in login,register page

--- a/src/Pages/authention/login/style.module.scss
+++ b/src/Pages/authention/login/style.module.scss
@@ -7,9 +7,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    //     background-color: #4158D0;
-    // background-image: linear-gradient(43deg, #4158D0 0%, #5097c8 46%, #683bd8 100%);
-
     background: url('../../../assets//bglogin.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -25,6 +22,13 @@
         padding: 25px;
         border-radius: 10px;
         border: none;
+        width: 500px;
+
+        @media (max-width: '510px') {
+            padding: 10px;
+            width: 85%;
+            margin: auto;
+        }
 
         .title {
             // padding-top: 20px;
@@ -39,8 +43,12 @@
             position: relative;
             padding-top: 20px;
             margin: 25px 0;
-            width: 500px;
+            width: 100%;
 
+            @media (max-width: '1200px') {
+
+                margin: 10px 0;
+            }
 
 
             input {
@@ -56,19 +64,41 @@
                 border-radius: 3px;
                 background: transparent;
                 transition: border-color 0.2s;
+
+                &::placeholder {
+                    color: transparent;
+                }
+
+                &:placeholder-shown~label {
+                    font-size: 17px;
+                    cursor: text;
+                    top: 20px;
+                }
+
+                &:focus {
+                    padding-bottom: 6px;
+                    font-weight: 700;
+                    border-width: 3px;
+                    color: #fff;
+                }
+
+                &:focus~label {
+                    position: absolute;
+                    top: 0;
+                    display: block;
+                    transition: 0.2s;
+                    font-size: 17px;
+                    font-weight: 700;
+                    color: #fff;
+
+                }
+
+                &:required,
+                &:invalid {
+                    box-shadow: none;
+                }
             }
 
-            input::placeholder {
-                color: transparent;
-            }
-
-            input:placeholder-shown~label {
-                font-size: 17px;
-                cursor: text;
-                top: 20px;
-            }
-
-            
             label {
 
                 position: absolute;
@@ -81,44 +111,37 @@
                 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
 
-            input:focus {
-                padding-bottom: 6px;
-                font-weight: 700;
-                border-width: 3px;
-                color: #fff;
-            }
 
-            input:focus~label {
-                position: absolute;
-                top: 0;
-                display: block;
-                transition: 0.2s;
-                font-size: 17px;
-                font-weight: 700;
-                color: #fff;
-
-            }
-
-            /* reset input */
-            input:required,
-            input:invalid {
-                box-shadow: none;
-            }
         }
+
         .file_input {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            input{
-                padding-left: 30px;
-                width: 70%;
 
-            border: none;
+            @media (max-width: '510px') {
+                flex-direction: column;
+                align-items: start;
+            }
+
+            input {
+                border-radius: 5px;
+                padding-left: 30px;
+                width: 60%;
+                border: none;
+
+                @media (max-width: '510px') {
+                    width: 100%;
+                    padding: 5px;
+                    margin-top: 15px;
+
+                }
+            }
+
         }
-        
-        }
-        .choose_file{
-            width: 200px;
+
+        .choose_file {
+            width: 180px;
             height: 40px;
             border-radius: 5px;
             border: 1px solid #fff;
@@ -127,26 +150,39 @@
             padding: 0 10px;
             display: flex;
             align-items: center;
+            justify-content: space-between;
             background-color: transparent;
-            p{
+
+            p {
                 font-size: 15px;
+
             }
-            .camera{
-                margin-right: 15px;
-                &:hover{
-                   transition: all .3s;
+
+            .camera {
+                // margin-right: 15px;
+                width: 35px;
+
+                // @media (max-width: '500px') {
+                //     // margin-right: 5px;
+                //     width: 20px;
+                // }
+
+                &:hover {
+                    transition: all .3s;
 
                 }
             }
-            &:hover{
-               transition: all .4s;
-              transform: scale(1.1); 
-              .camera{
-                               transition: all .4s;
 
-                   transform: scale3d(1.1); 
+            &:hover {
+                transition: all .4s;
+                transform: scale(1.1);
 
-              }
+                .camera {
+                    transition: all .4s;
+
+                    transform: scale3d(1.1);
+
+                }
             }
         }
 
@@ -159,6 +195,7 @@
             border: 1px solid #fff;
             border-radius: 4px;
             margin-top: 20px;
+            margin-bottom: 15px;
 
             &:hover {
                 transition: all .3s;
@@ -171,16 +208,37 @@
 
         }
 
+        .login_register_btn {
+            margin-top: 25px;
+
+            a {
+                background-color: transparent;
+                padding: 5px 10px;
+                border-radius: 4px;
+                margin-right: 15px;
+                color: #fff;
+                border: 1px solid #fff;
+
+                &:hover {
+                    transition: all .4s;
+                    transform: scale(1.06);
+                    background-color: indigo;
+                    border: 1px solid indigo;
+
+                }
+            }
+        }
+
         .reset_btn {
             color: #e7e3e3;
             font-size: 16px;
             font-family: Arial, Helvetica, sans-serif;
+            padding-top: 15px;
 
             &:hover {
                 color: #fff;
             }
         }
-
 
         p {
             color: #fff;
@@ -194,130 +252,6 @@
             }
 
         }
-
-        // ~~~~~~~~~~~~~~~~~~~~
-
-
-
-
-        // width: 500px;
-        // height: auto;
-        // padding: 25px;
-        // border-radius: 10px;
-        // border: none;
-        // // border-bottom: 1px solid white;
-        // // background: transparent;
-        // backdrop-filter: blur(15px);
-
-        // @media (max-width: '1200px') {
-        //     width: 50%;
-        // }
-
-        // @media (max-width: '800px') {
-        //     width: 70%;
-        // }
-
-        // @media (max-width: '500px') {
-        //     width: 90%;
-        // }
-
-        // a {
-        //     color: rgb(223, 196, 242);
-        // }
-
-        // p {
-        //     text-align: center;
-        //     color: #fff;
-        //     font-size: 20px;
-        // }
-
-        // div {
-        //     margin: 15px 0;
-        //     display: flex;
-        //     flex-direction: column;
-
-        //     label {
-        //         margin-bottom: 10px;
-        //         border-radius: 5px;
-        //         color: #fff;
-        //         font-weight: 700;
-        //         font-family: 'Montserrat', sans-serif;
-        //         font-family: 'Open Sans', sans-serif;
-        //     }
-
-        //     input {
-        //         width: 100%;
-        //         border: none;
-        //         border-bottom: 1px solid #fff;
-        //         color: #fff;
-        //         padding: 10px;
-        //         font-size: 20px;
-        //         background-color: transparent;
-        //         backdrop-filter: blur(0);
-        //         outline: none;
-        //         // border-radius: 5px;
-
-        //         &:user-invalid {
-
-        //             border-bottom: 2px solid red;
-        //         }
-        //     }
-
-        //     ::placeholder {
-        //         color: #fff;
-        //         font-size: 14px;
-        //     }
-        // }
-
-
-        // .login_btn {
-        //     width: 100%;
-        //     display: inline-block;
-        //     outline: none;
-        //     font-family: inherit;
-        //     font-size: 1em;
-        //     box-sizing: border-box;
-        //     border: none;
-        //     font-weight: bold;
-        //     border-radius: .3em;
-        //     height: 2.75em;
-        //     line-height: 2.5em;
-        //     text-transform: uppercase;
-        //     padding: 0 1em;
-        //     box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(110, 80, 20, .4),
-        //         inset 0 -2px 5px 1px rgba(139, 66, 8, 1),
-        //         inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
-        //     background-image: linear-gradient(160deg, #a54e07, #b47e11, #fef1a2, #bc881b, #a54e07);
-        //     border: 1px solid #a55d07;
-        //     color: rgb(120, 50, 5);
-        //     text-shadow: 0 2px 2px rgba(250, 227, 133, 1);
-        //     cursor: pointer;
-        //     transition: all .2s ease-in-out;
-        //     background-size: 100% 100%;
-        //     background-position: center;
-
-        //     &:focus,
-        //     &:hover {
-        //         background-size: 150% 150%;
-        //         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23),
-        //             inset 0 -2px 5px 1px #b17d10,
-        //             inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
-        //         border: 1px solid rgba(165, 93, 7, .6);
-        //         color: rgba(120, 50, 5, .8);
-        //         transform: translateY(2px);
-        //     }
-
-        //     &:active {
-        //         box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(110, 80, 20, .4),
-        //             inset 0 -2px 5px 1px #b17d10,
-        //             inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
-
-        //     }
-
-
-        // }
-
-
 
 
     }
