--- a/src/Pages/checkout/styles.module.scss
+++ b/src/Pages/checkout/styles.module.scss
@@ -6,8 +6,17 @@
   display: flex;
   justify-content: space-between;
 
+  @media (max-width: '1200px') {
+    flex-direction: column;
+
+  }
+
   form {
     width: 60%;
+
+    @media (max-width: '1200px') {
+      width: 100%;
+    }
 
     h1 {
       font-size: 22px;
@@ -43,6 +52,10 @@
       background-color: #fff;
       font-size: 15;
       font-weight: 500;
+
+      @media (max-width: '1200px') {
+        width: 100%;
+      }
     }
 
     input::placeholder {
@@ -61,40 +74,50 @@
   }
 
   .pay_details {
+    width: 30%;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: start;
-    box-shadow: 1px 1px 8px -2px rgba(0,0,0,0.74);
--webkit-box-shadow: 1px 1px 8px -2px rgba(0,0,0,0.74);
--moz-box-shadow: 1px 1px 8px -2px rgba(0,0,0,0.74);
-.price{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 10px 0;
-  h4{   
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 20px;
-      margin-right: 30px;
+    box-shadow: 1px 1px 8px -2px rgba(0, 0, 0, 0.74);
+    -webkit-box-shadow: 1px 1px 8px -2px rgba(0, 0, 0, 0.74);
+    -moz-box-shadow: 1px 1px 8px -2px rgba(0, 0, 0, 0.74);
 
-    }
-    h1{
-      color: indigo;
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-    h1 + span{
-            color: indigo;
-
-    }
-    span{
-      font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    @media (max-width: '1200px') {
+      width: 100%;
     }
 
-} 
+    .price {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 10px 0;
+
+      h4 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        margin-right: 30px;
+
+      }
+
+      h1 {
+        color: indigo;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      }
+
+      h1+span {
+        color: indigo;
+
+      }
+
+      span {
+        font-size: 20px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+      }
+
+    }
 
   }
 }
