add data to firestore database

--- a/src/Components/Services/styles.module.scss
+++ b/src/Components/Services/styles.module.scss
@@ -1,3 +1,19 @@
+.red{
+    background-color: rgba(247, 101, 101, 0.7);
+    
+}
+.yellow{
+    background-color: rgba(240, 240, 58, 0.3);
+
+}
+.green{
+    background-color: rgba(140, 240, 140, 0.5);
+
+}
+.blue{
+    background-color: rgba(132, 101, 243, 0.3);
+
+}
 .services {
     padding: 40px 70px;
     display: grid;
