--- a/src/Pages/cart/styles.module.scss
+++ b/src/Pages/cart/styles.module.scss
@@ -36,15 +36,20 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+             h1{
+                font-size: 20px;
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
+             }
             span {
-                font-size: 25px;
-                font-weight: 600;
+                font-size: 17px;
+                font-weight: 700;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             }
         }
 
         p {
+            margin-top: 20px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
@@ -115,7 +120,7 @@
         overflow-x: auto;
         width: 65%;
         border-radius: 5px;
-        border: 1px solid indigo;
+        // border: 1px solid indigo;
 
         @media (max-width: '1170px') {
             width: 100%;
@@ -123,162 +128,87 @@
 
         }
 
+         
         table {
-            width: 100%;
-            font-family: Arial, Helvetica, sans-serif;
+            border: 1px solid #ccc;
             border-collapse: collapse;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            table-layout: fixed;
 
-            @media (max-width: '1170px') {
-                width: 600px;
-
-
+             
+            tr {
+                background-color: #f8f8f8;
+                border: 1px solid #ddd;
+                padding: .35em;
             }
 
-            thead {
-                background-color: indigo;
+            th,
+            td {
+                padding: .625em;
+                text-align: start;
 
-
-                th {
-
-                    padding: 5px;
-                    text-align: start;
-                    border-right: 1px solid #fff;
-                    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                    padding-left: 10px;
-                    color: #fff;
-                    // border-radius: 10px
+                &:nth-child(1) {
+                    width: 100px;
+                     @media (max-width: '1170px') {
+                    
+                    width: 100%;
+                }
                 }
             }
 
-            tbody {
+            th {
+                font-size: .85em;
+                letter-spacing: .1em;
+                text-transform: uppercase;
+            }
 
-                img {
-                    width: 100px;
-                    height: 100px;
-                    border-radius: 5px;
+            @media screen and (max-width: 1000px) {
+                border: 0;
+
+                caption {
+                    font-size: 1.3em;
+                }
+
+                thead {
+                    border: none;
+                    clip: rect(0 0 0 0);
+                    height: 1px;
+                    margin: -1px;
+                    overflow: hidden;
+                    padding: 0;
+                    position: absolute;
+                    width: 1px;
                 }
 
                 tr {
-                    border-radius: 10px;
-                    padding: 5px;
-                    text-align: start;
-                    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                    padding-left: 10px;
-
-                    td {
-                        &:nth-child(2) {
-
-                            width: 100%;
-                            height: 100%;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                        }
-
-
-
-                        padding: 10px;
-                        border-right: 1px solid rgb(210, 170, 238);
-                    }
+                    border-bottom: 3px solid #ddd;
+                    display: block;
+                    margin-bottom: .625em;
                 }
 
-                .plus_minus_btn {
-                    display: flex;
-                    border: 1px solid indigo;
-                    border-radius: 4px;
-                    justify-content: space-between;
+                td {
+                    border-bottom: 1px solid #ddd;
+                    display: block;
+                    font-size: .8em;
+                    text-align: right;
 
-                    width: 100px;
-                    height: 30px;
-
-                    span {
-                        font-size: 20px;
+                    &::before {
+                        /*
+        * aria-label has no advantage, it won't be read inside a table
+        content: attr(aria-label);
+        */
+                        content: attr(data-label);
+                        float: left;
+                        font-weight: bold;
+                        text-transform: uppercase;
                     }
 
-                    button {
-                        background: indigo;
-                        outline: none;
-                        width: 30px;
-                        border: none;
-                        height: 100%;
-                        border-right: 1px solid indigo;
-                        color: #fff;
-                        border: none;
-
-                        &:hover {
-
-                            .plus_icon,
-                            .minus_icon {
-                                transition: all .4s;
-                                transform: rotate(180deg);
-                            }
-
-                        }
+                    &:last-child {
+                        border-bottom: 0;
                     }
                 }
-           .delete{
-            // width: 100%;
-            // height: 100%;
-            // display: flex;
-            // justify-content: space-between;
-            // align-items: center;
-     .delete_btn {
-                    --font-color: #323232;
-                    --bg-color-sub: #dedede;
-                    --bg-color: #eee;
-                    --main-color: #323232;
-                    position: relative;
-                    width: 100px;
-                    height: 30px;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                    border: 1px solid indigo;
-                    background-color: #fff;
-                    border-radius: 4px;
-                    overflow: hidden;
-                    margin: auto;
-                }
-
-                .delete_btn,
-                .btn_icon,
-                .btn_text {
-                    transition: all 0.3s;
-                }
-
-                .delete_btn .btn_text {
-                    transform: translateX(20px);
-                    color:indigo;
-                    font-weight: 600;
-                }
-
-                .delete_btn .btn_icon {
-                    position: absolute;
-                    transform: translateX(70px);
-                    height: 100%;
-                    width: 39px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    border-left: 1px solid indigo;
-                }
-
-                 
-
-                .delete_btn:hover .btn_text {
-                    color: transparent;
-                }
-
-                .delete_btn:hover .btn_icon {
-                    width: 100px;
-                    transform: translateX(0);
-                }
-
-                .delete_btn:active {
-                    transform: translate(3px, 3px);
-                }
-           }
-           
             }
         }
     }
