--- a/src/Pages/shop/styles.module.scss
+++ b/src/Pages/shop/styles.module.scss
@@ -45,18 +45,12 @@
     -webkit-appearance: none;
     -moz-appearance: none;
   }
-
-
-
   .category_select {
-
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
     option {
       font-family: 'Montserrat';
-      // padding: 10px;
     }
-
     margin-right: 20px;
     background-image: linear-gradient(45deg, transparent 50%, #fff 50%),
     linear-gradient(135deg, #fff 50%, transparent 50%),
@@ -68,9 +62,8 @@
     5px 5px,
     2.5em 2.5em;
     background-repeat: no-repeat;
-  }
 
-  .category_select:focus {
+    &:focus {
     background-image:
       linear-gradient(45deg, white 50%, transparent 50%),
       linear-gradient(135deg, transparent 50%, white 50%),
@@ -90,6 +83,9 @@
       color: #000;
     }
   }
+  }
+
+
 
 
 .search_product{
