--- a/src/UI_Design/ProductCard/styles.module.scss
+++ b/src/UI_Design/ProductCard/styles.module.scss
@@ -23,6 +23,11 @@
         right: 10px;
         background-color: transparent;
         border: none;
+        p{
+            display: flex;
+        align-items: center;
+        flex-direction: column;
+        }
     }
 
     .product_img {
@@ -41,12 +46,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-
+ 
         h3 {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 20px;
-            height: 50px;
-
+           margin: 15px 0;
             @media (max-width: '600px') {
                 font-size: 15px;
             }
