--- a/src/UI_Design/ProductCard/styles.module.scss
+++ b/src/UI_Design/ProductCard/styles.module.scss
@@ -23,10 +23,24 @@
         right: 10px;
         background-color: transparent;
         border: none;
-        p{
+        div{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        img{
+            margin-bottom: 6px;
+        }
+        button{
+            margin-top: 5px;
+            background: transparent;
+            border: 0;
             display: flex;
         align-items: center;
         flex-direction: column;
+        }
+        .comment_btn{
+            color: #03309C;
         }
     }
 
@@ -194,5 +208,13 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-
+.close_modal{
+    width: 100%;
+    background-color:red;
+    text-align: end;
+    button{
+        background-color: transparent;
+        border: none;
+    }
+}
 }
